# solana-seal

./: LICENSE  README.md
crates/crypto/src/: lib.rs
crates/key-server/: Cargo.toml
crates/key-server/src/: server.rs
solana-seal-dapps/: README.md  example.env  pnpm-lock.yaml
solana-seal-dapps/src/app/: page.tsx
solana-seal-dapps/src/components/: ImageEncryptDecrypt.tsx  TextEncryptDecrypt.tsx  WalletClientWrapper.tsx  WhitelistManager.tsx
solana-seal-dapps/src/hooks/: useSolanaSealClient.ts
solana-seal-dapps/src/solana-seal-sdk/: client.ts  decrypt.ts  encrypt.ts  index.ts  keys.ts  session-key.ts
solana-seal-dapps/src/utils/: constants.ts  photoBlobs.ts  starter.seal.ts  starter.ts  whitelist.ts
solana-seal-frontend/: README.md  package.json
solana-seal-frontend/src/app/: layout.tsx
solana-seal-frontend/src/contexts/: NetworkContext.tsx  WalletContextProvider.tsx
solana-seal-frontend/src/hooks/: useSessionKey.ts
solana-seal-frontend/src/solana-seal-sdk/: dem.ts  (+2 more)
solana-seal-programs/: Anchor.toml  package.json  pnpm-lock.yaml
solana-seal-programs/programs/solana_seal_account_based/: Cargo.toml
solana-seal-programs/programs/solana_seal_account_based/src/: lib.rs
solana-seal-programs/programs/solana_seal_starter/: Cargo.toml
solana-seal-programs/programs/solana_seal_starter/src/: lib.rs
solana-seal-programs/tests/: solana_seal_account_based.ts  solana_seal_whitelist.ts
solana-seal-ts-sdk/: README.md  elgamal.ts  ibe.ts  kdf.ts  session-key-solana.ts  utils.ts
solana-seal-ts-sdk/solana/: useSolanaSealClient.ts  useSolanaSessionKey.ts
(+25 files in other folders)
