[package]
name = "solana_seal_account_based"
version = "0.1.0"
description = "Account-based encryption program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_seal_account_based"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] } 